<resources>
    <string name="app_name">Blockly</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_clear">Clear</string>
    <string name="action_airstrike">Airstrike</string>
    <string name="action_carpet_bomb">Carpet Bomb</string>
    <string name="action_spaghetti">Spaghetti</string>
    <string name="action_run">Run</string>
    <string name="action_submitCode">SubmitCode</string>
    <string name="action_installApk">InstallApk</string>
    <string name="action_refresh">XML刷新</string>

    <string name="toast_workspace_saved">Saved workspace contents.</string>
    <string name="toast_workspace_not_saved">Couldn\'t save workspace.</string>
    <string name="toast_workspace_file_not_found">Couldn\'t find saved workspace.</string>
    <string name="toast_workspace_load_failed">Failed to load workspace.</string>

    <string name="blockly_toolbox_default_category_name">Blocks</string>

    <string name="blockly_clipdata_label_default">Blockly blocks</string>
    <string name="mutator_icon_alt_text">Modify the block\'s shape.</string>
    <string name="mutator_done">Done</string>

    <string name="mutator_ifelse_edit_title">Update if else block</string>
    <string name="mutator_ifelse_edit_ifelse_count">Number of “if” tests: %d</string>
    <string name="mutator_ifelse_edit_has_else">Final “else” statement?</string>

    <string name="mutator_procedure_def_title">Function Inputs</string>
    <string name="mutator_procedure_def_header_format">%1$s with:</string>

    <string name="procedure_argument_name_hint">Argument name</string>
    <string name="procedure_argument_delete_hint">Delete argument</string>
    <string name="procedure_argument_add_label">Add argument</string>
</resources>
